--- a/_posts/2018-08-03-2193.md
+++ b/_posts/2018-08-03-2193.md
@@ -8,7 +8,7 @@ comments: true
 ---
 
 
-방법 1
+# 방법 1
 ``` python
 N = int(input())
 D = [0] * (N + 1)
@@ -21,23 +21,27 @@ for i in range(3,N+1):
     D[i] = D[i-1] + D[i-2]
 print(D[N])
 ```
-문장] 0     문장] 01
-D의 n-1     D의 n-2
-이 두가지 경우의 수만 더한다 생각하면 된다.
-사실은 그것을 신경쓴 코드는 없지만...
-경우의 수만 구하면 되서 이런 것이 가능한 것이다.
+문장 0     문장] 01  
+D의 n-1     D의 n-2  
+이 두가지 경우의 수만 더한다 생각하면 된다.  
+사실은 그것을 신경쓴 코드는 없지만...  
+경우의 수만 구하면 되서 이런 것이 가능한 것이다.  
 
-방법 2
-```python3
-N = int(input())
-D = [[0] * 2 for _ in range(N + 1) ]
+# 방법 2
+``` python
+n = int(input())
+d = [[0, 0] for _ in range(n+1)]
 
-D[1][1] = 1
-D[1][0] = 0
-for i in range(2, N+1):
-    D[i][0] = D[i-1][0] + D[i-1][1]
-    D[i][1] = D[i-1][0]
-print(D[N][0]+D[N][1])
+d[1][0] = 0
+d[1][1] = 1
+
+if n == 1:
+    print(1)
+else:
+    for i in range(2, n+1):
+        d[i][0] = d[i-1][0] +  d[i-1][1]
+        d[i][1] = d[i-1][0]
+    print(d[n][0] + d[n][1])
 ```
 
 D[N][L]에서 N은 글자의 길이 L은 마지막 수이다.
