--- a/_posts/2018-09-05-2156.md
+++ b/_posts/2018-09-05-2156.md
@@ -8,10 +8,21 @@ comments: true
 ---
 https://www.acmicpc.net/problem/2156
 
+# 풀이
+
+- 지금 경우의 수 포함하면
+
+- 0번 연속 -> 그냥 그대로 ans[i-1]만 넣으면 된다(어차피 전의 것이 뭐든 상관 없다.)
+  - ans[i] = ans[i-1]
+- 1번 연속 -> 지금것은 무조건 되어 있어야 하고, 이 전에 것은 무조건 포함 안되있어야 한다.
+  - ans[i] = glasses[i] + ans[i-2] # ans[i-1] 이 없는 이유는 무조건 안되있어야 하니까
+- 2번 연속 -> glasses [i-1] + glasses[i-2]
+  - ans[i] = glasses[i] + glasses[i-1] + ans[i-3] # ans[i-2]는 무조건 안되있어야 하니까
+
 
 ``` python
 n = int(input())
-glasses = [0] * (n+1)
+glasses = [0] + [int(input()) for _ in range(n)]
 answer = [0] * (n+1)
 for i in range(1,n+1):
     glasses[i] = int(input())
@@ -21,9 +32,29 @@ if n >= 2:
     answer[2] = answer[1]+glasses[2]
 
 for i in range(3,n+1):
-    answer[i] = answer[i-1]
+    answer[i] = answer[i-1] # 이번 것 포함 0번 연속일 때
     answer[i] = max(answer[i],answer[i-2]+glasses[i])
+    #
     answer[i] = max(answer[i],answer[i-3]+glasses[i-1]+glasses[i])
+
+print(max(answer))
+```
+
+
+
+- 최적화 한다.
+
+``` python
+n = int(input())
+glasses = [0] + [int(input()) for _ in range(n)]
+answer = [0] * (n+1)
+
+answer[1] = glasses[1]
+if n >= 2:
+    answer[2] = answer[1]+glasses[2]
+
+for i in range(3,n+1):
+    answer[i] = max(answer[i-1],answer[i-2]+glasses[i],answer[i-3]+glasses[i-1]+glasses[i])
 
 print(max(answer))
 ```
