--- a/_posts/2018-09-15-9461.md
+++ b/_posts/2018-09-15-9461.md
@@ -12,22 +12,17 @@ comments: true
 ``` python
 
 import sys
-t = int(sys.stdin.readline())
+input = lambda : sys.stdin.readline().rstrip()
 
-d = [0,1,1,1,2,2,3,4,5,7,9]
+d = [1,1,1,2]
 def solving(n):
-    for _ in range(n):
-        d.append(0)
-    if d[n] > 0:
-        return str(d[n])
-    ans = 0
-    k = 9
-    for i in range(10,n+1):
-        d[i] = d[i-1]+d[i-5]
-    return str(d[n])
+    for _ in range(n): d.append(0)
+    if d[n] > 0: return d[n-1]
+    for i in range(1,n):
+        d[i+3] = d[i] + d[i+1]
+    return d[n-1]
 
-for _ in range(t):
-    sys.stdout.write(solving(int(sys.stdin.readline())))
-    sys.stdout.write('\n')
+for _ in range(int(input())):
+    print(solving(int(input())))
 
 ```
