--- a/_posts/2019-04-20-geek.md
+++ b/_posts/2019-04-20-geek.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "글또 2기 회고록"
 category: Algorithm
-tags: [ 'algorithm', 'python' ]
+tags: [ '글또 다짐글', '글또 회고록' ]
 comments: true
 ---
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
