--- a/_posts/2019-07-03-geek_Phase3.md
+++ b/_posts/2019-07-03-geek_Phase3.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "글또 3기 다짐글"
 category: Geek
-tags: [ 'Geek', '글또', '글또 3기' ]
+tags: [ '글또 다짐글' ]
 comments: true
 ---
 
