--- a/_posts/2018-11-11-geek.md
+++ b/_posts/2018-11-11-geek.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "[글또] 글또 2기 다짐글"
 categories: Algorithm
-tags: [ '글또2기' ]
+tags: [ '글또 다짐글' ]
 comments: true
 ---
 
