--- a/_posts/2020-01-19-2020_first.md
+++ b/_posts/2020-01-19-2020_first.md
@@ -12,6 +12,7 @@ comments: true
 감사합니다:)
 ---
 
+
 어느새 한해의 두번째달 까지 되었다.  
 이번에는 계획을 좀 천천히 세워보자는 의미로 느릿하게 세웠다가.... 계획을 세우는게 얼마나 중요한지를 깨닫게 되었다.  
 한 이년정도 계획을 좀 (내 기준) 빡세게 세운 것 같기도 하고 그래서 계획을 어떻게 하면 잘 세울까 라는 고민을 하게 되었다.  
@@ -24,7 +25,7 @@ comments: true
 
 
 
-1. 재무계획
+# 재무계획
 돈을 막쓰지는 않았던 것 같았는데 돌아보면 좀 yolo로 사는 편이었던 것 같다.  
 30살이 되어서 그런지 올해부터는 러프하지만 제대로 세워 보려고 한다.  
 
@@ -39,7 +40,7 @@ comments: true
 
 
 
-2. 건강과 운동 그리고 멘탈케어
+# 건강과 운동 그리고 멘탈케어
 이 세가지는 함께 엮을 수 밖에 없는 것이  
 - 멘탈이 무너지면 건강이 안좋아진다.
 - 건강이 안좋아지면 운동을 할 수가 없다.
@@ -63,7 +64,7 @@ comments: true
 
 
 
-3. 영어
+# 영어
 작년 11월부터 링글을 꾸준히 하고 있다.
 링글은 정말 비싸다. 한번 수업에 3만원 정도 한다. 그래서 그런지 더 악착같이 준비하게 되고 정말 오프라인 행사에도 꼬박꼬박 나간다.  
 퀄리티도 좋구 이정도 퀄리티인 학원과 가격이 비슷한데 집에서 할 수 있는 것이 좋긴 한데...  
@@ -77,7 +78,7 @@ comments: true
 
 
 
-4. 글쓰기
+# 글쓰기
 - 독서 한달에 한권
 - 탈고 전에 두번 읽어보기
 
@@ -86,7 +87,7 @@ comments: true
 
 
 
-5. 개발자의 자기개발
+# 개발자의 자기개발
 - 알고리즘
 - resume의 꾸준한 update
 - 네트워크 공부
