--- a/_posts/2018-11-29-layer3.md
+++ b/_posts/2018-11-29-layer3.md
@@ -97,3 +97,128 @@ if( (Mask & D) == Destination Network Address ) forwarding to Next Hop
 ![ip_encapsulation](https://joosjuliet.github.io/assets/img/4.png)
 
 최종적으로 목적지 호스트는 데이터 그램을 받게 된다.
+
+네트워크 마다
+1. 주소 체제가 다르거나
+2. 주고 받는 패킷의 형태가 달라서
+통신이 불가능하다.
+
+# 인터넷 생긴이유
+세계적 자유롭게 통신을 할 수 있게 하기 위해서 만든 것이 인터넷이다.
+각 네트워크 별 주소체계, 패킷도 다를 수 있다.
+그래서 1에서 2 네트워크로 보낼 때 규약이 다르면 안되니 layer3에서 모든 네트워크 규칙을 정해서 얘기할 수 있게 하는 것
+계층이 가진 철학 -> 어떤 end point든 다 동일하게 취급한다.
+
+
+Internet은 하나의 네트워크라고 가정은 했지만, 실제로 존재는 하지 않고 라우터와 작은 네트워크들로 구성된다. 그래서 virtual network라고도 부른다.
+
+
+
+# 그래서 router라는 개념이 생김
+인터넷은 서로 규약 다른 네트워크를 연결하는 걸 만들어서 네트워크 다르더라도 통신 도와줄 수 있게 만들어주자
+그래서 만들어진게 router
+
+# router 일
+- 패킷 포워딩
+  1. 어느 네트워크를 거쳐야 빨리 도착하는 지를 알려주는 게 라우터 일
+- 형식 변환
+  2. 형식 변환해서 알려준다.(호환)
+
+## 패킷 포워딩
+## 형식 변환
+모든 네트워크가 쓸 수 있는 프로토콜을 정하자. -> ip
+모두가 공통적으로 쓰는 것 -> ip
+
+*host 응용프로그램을 수행하는 컴퓨터*
+
+# 맥주소 vs ip
+(고유한)맥주소는(기계의 고유주소, 주민등록번호) datalink에서 부여받는 것,
+왜 유일한건데 ip를 쓰지 왜 두개다 유일하지?(이건 그냥 주소)
+
+#ip 는
+32bit로 표현된 주소체계
+32를 4로 나눠서 8bit * 4
+즉 xxx.xxx.xxx.xxx
+왼쪽에서 부터 3번째까지가 네트워크 주소다 하면 그게 네트워크 크기인것이다.
+그리고 나머지는 다 호스트이다.
+
+예를 들어 192.193.192.1 이면, 가장 첫번째부터 32-8 =24번째 비트까지가 네트워크 주소고, 나머지가 호스트 주소다 라고 하면은
+192.19,,...../
+
+
+
+
+NAT가 42억 그거다.
+서울 강남구 테헤란로 507 위워크 6층 108호
+서브넷 마스크
+=> A,B,C class나눈 이유
+end to end 통신이 결국에 패킷 보낼 때 하나의 컴퓨터에서 다음 컴퓨터로 보내는 거잖아
+보내기 위해서는 ip주소를 보고 가는 건데
+동이랑 호를 알면 더 빨리 찾겠지
+
+그러니까
+prefix | suffix 사진 첨부
+두개로 나눠서 동과 호를 분리
+클래스 다섯개로 나뉘는데 a를 봐 suffix가 많지. 호스트 표현할 게 많지 그럼 더 큰 네트워크겠지
+d,e는 멀티케스트 용
+
+
+
+
+
+그래서 그런식으로 구성하기 위해서 네트워크라는 개념을 만들었고,
+네트워크 구분하는 기준이, class로 필터링을 해서 a class 에 해당하는 크기의 네트워크
+b,c class 크기 네트워크
+
+a,b,c 클래스로 구분하기에는 네트워크 크기가 다양해. 그래서 3개로만 나누느 것이 아니라 네트워크 크기를 그냥
+ip주소 전체르 보면 그건 두개로 나뉘어진다.
+network, host주소로 나눠진다.
+
+이건 그냥 예시겠지 더 다양할테지
+
+# 그걸 효율화시키기 위해서
+- Subnet
+- CIDR
+  - network가 어디서 부터 어디까지인가 인가를 지정해 놓는 것을 써놓는다. 그게 바로 cibr이라고 ip주소 끝나고 /하고 비트 수 적혀있따.
+    비트 수가 네트워크 차지하는 비트 수를 나타내는 것
+
+두 네트워크에 하나의 호스트 연결 가능 (그것이 router, ip주소 두개 할당)
+
+#CIDR 예시
+ip -> 192.168.4.5/12
+이걸 2진수 표현 하면
+->  0011110.1010101.100101010.11111 라면 왼쪽 12번째자리까지가 네트워크 주소 그 이후 host
+
+네트쿼크는 prefix suffix type of address purpose로 된 사진
+all 0s는 예약어같은 것이다. ()
+
+
+
+# 이제 router의 첫번째 기능 포워딩으로 고
+지금 ip내용을 알려준 것
+
+router 는 포워딩 테이블을 보고 어떤 경로로 가야지 최적으로 갈 수 있을지 설명
+포워딩 테이블이 구성된다 세개 destination/mask/next hop
+
+destination -> 네트워크 주소(host가 전부 0인게)
+*ip주소의 network주소?
+ip주소가  10.100.38.27/8이면 ip주소가 속한 network주소는 10.0.0.0이다.
+사람 찾을 때 동을 먼저 찾지. network 는 살고 있는 공간 ip주소는 실제 찾아가는 애*
+
+router는 동만 찾기 때문에 forwarding table에 destination은 네트워크 주소만 잇는 것이다.
+mask있는 이유는 desination주소가 똑같을 수가 있어 어디서 부터 어디까지가 host주소고 network주소인지 알아야할 것 아냐
+
+- mask란?
+ip주소 들어왔을 때 패킷에서 destination 으로 보내기 위한 마스크이다.
+mask씌워서 destination이랑 일치해 그럼 next hop으로 보낸다.
+근데 deliver direct를 통해 바로 direct로 갈 수도 잇다
+
+
+#NAT(Network Address transmission)
+ip주소 부족 현상 해결 위해서 nat만들
+공유기 쓴느 거임
+- 하나의 호스트를 씀
+- 공인 ip와 내부 ip분리
+- 내부에서는 내부 ip쓰고 외부로 통할 때는 패킷 나가는 순간 변환 시켜줘서 다른 애들이랑 통신할 수 있따.
+- 내부 ip도 결국 컴퓨터 통신 위해서 필요하다.
+- block description에서 16 contiguous class b blocks사용 한다. 내부용 아이피 사용할 때
