--- a/_posts/2018-08-22-9095.md
+++ b/_posts/2018-08-22-9095.md
@@ -25,23 +25,27 @@ comments: true
 # solution 설명 :
 - O(N)
 - dp를 사용
-- arr의 index(i)는 i를 구성하는 경우의 수다.
-- arr[i]에는 arr[i-1], arr[i-2], arr[i-3]의 경우의 수를 더한 값을 넣는다.
+- dd의 index는 i를 구성하는 경우의 수다.
 
+![description](/images/2018-08-22-9095/description.png)
+
+- dd[4] 경우
+  -  dd[1]에서 +3을 해 dd[4]를 이룬다. 
+  - dd[2]에서 +2를 해 dd[4]를 이룬다. 
+  - dd[3]에서 +1를 해 dd[4]를 이룬다. 
+  - 그렇기 때문에 dd[4] = dd[1] + dd[2] + dd[3] 이다.
+
+- dd[i]에는 dd[i-1], dd[i-2], dd[i-3]의 경우의 수를 더한 값을 넣는다.
 
 ``` python
-N = int(input())
-count = [ int(input()) for _ in range(N)]
-d = [0] * (max(count)+1)
-def solving(n):
-    d[1] = 1
-    d[2] = 2
-    d[3] = 4
-    for i in range(4, n+1):
-        d[i] = d[i-1] + d[i-2] + d[i-3]
-    return d[n]
-for i in count:
-    print(solving(i))
+def solved(n):
+    dd = [1, 2, 4]
+    for i in range(3,n):
+        dd += [dd[i-3] + dd[i-2] + dd[i-1]]
+    return dd[n-1]
+
+for _ in range(int(input())):
+    print(solved(int(input())))
 
 ```
 
