update public and private key

--- a/_posts/2018-12-23-key.md
+++ b/_posts/2018-12-23-key.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[보안] 대칭키와 비대칭키"
+title: "[보안] 대칭키와 비대칭키, 그리고 하이브리드 키(feat. 맨 인 더 미들)"
 category: Security
 tags: [ 'security', 'computer_science' ]
 comments: true
@@ -23,13 +23,16 @@ comments: true
 속도가 빠르다.
 
 ## 대칭키의 문제점
-1번에서 B에게 A가 Key를 보낼 때 모양을 보고 복사를 하고, 3번에서 A가 B에게 암호화된 정보를 보낼 때 그 정보를 훔치면 정보는 모두 노출된다.
+- man in the middle
+A, B사이에 있는 사람이 중간다리 역할을 하면서 모든 통신문서를 보고 잘못된 정보를 전달하는 것이다.
+
+![man-in-the-middle](/images/2018-12-23-key/man-in-the-middle.png)
 
 ## 대칭키의 해결점
 - 비밀 통신망 또는 직접 전달 등의 안전한 전송방식을 통해 사전에 전달
 - 비대칭키 사용하기
 
-# 비대칭키
+# 비대칭키(Public Key Infrastructures, PKI)
 암호화 하는 Key와 복호화하는 Key가 서로 다른 Key다.
 
 private/public Key 모두 암호화/복호화 하는 Key가 될 수 있다.
@@ -56,19 +59,18 @@ private/public Key 모두 암호화/복호화 하는 Key가 될 수 있다.
 ## 비대칭키의 해결점
 - 처음 정보를 주고 받을 때 대칭 Key를 비대칭 Key 암호화로 주고 받고, 그렇게 서로 교환한 대칭 Key로 통신해 속도를 높였다.(하이브리드 키 방식)
 
-# 하이브리드 키 방식
+### 하이브리드 키 방식
+
+https는 하이브리드다  
+1. 송신자는 메세지를 공유키로 암호화해서 보내고, 사용한 공유키를 수신자에게 받은 공개키로 암호화해서 보낸다.
+2. 수신자는 개인키를 이용해서 송신자에게 받은 암호화된 공유키를 복호화한다. 그렇게 얻게 된 공유키로 메세지를 복호화해서 평문 메세지를 확인한다.
 
 
-https는 하이브리드다
-공개키 방식 man in the middle
-
-
-
-
-
-
-
-
-
+좀 더 자세한 설명은  
+http://www.parkjonghyuk.net/lecture/modernCrypto/lecturenote/chap06.pdf  
+에서 잘 설명되어 있다
+---
+참고자료:
+https://ko.wikipedia.org/wiki/%EC%A4%91%EA%B0%84%EC%9E%90_%EA%B3%B5%EA%B2%A9  
 <!-- http://www.parkjonghyuk.net/lecture/2011-1st-lecture/modernCrypto/chap06.pdf -->
 <!-- rsa 코드 선혁이것 참고해서 go로 만들어 보고 싶다. -->
