update blog tag

--- a/_posts/2020-01-19-2020_first.md
+++ b/_posts/2020-01-19-2020_first.md
@@ -2,8 +2,8 @@
 layout: post
 section-type: post
 title: "2020년 1/4분기 계획"
-category: Spring
-tags: [ 'spring', 'java' ]
+category: Joos
+tags: [ 'Joos' ]
 comments: true
 ---
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
