--- a/_posts/2020-03-04-1917.md
+++ b/_posts/2020-03-04-1917.md
@@ -10,8 +10,10 @@ comments: true
 서로에 대한 존중을 담은 덧글을 남겨 소통을 하신다면 더 좋은 글로 발전이 될 수 있을 것 같습니다.
 존중이 담기지 않은 덧글은 언제든 삭제될 수 있습니다.
 감사합니다:)
----
+---  
 
+
+# 감상
 1917을 보고 왔다.
 전쟁이 일어나면, 반인륜적 상황들이 일상이 된다는 것을 알려주는 영화다.
 
@@ -29,10 +31,6 @@ comments: true
 이 영화는 간접 체험 도가 꽤 높기에 상영 시간 동안 나도 그 1차 대전 참전병의 일상에 들어간 느낌이 든다.
 그래서 더 반전을 강조하는 영화인 것 같다.
 
-ps1.
+# 덧붙임말
 그런 상황을 한 번만 마주해도 꽤 긴 심리학 치료를 권고받는데, 1차 대전을 겪은 사람들은 제대로 된 정신적 치료는 받지 못했을 것이다.
 그상태로 일상으로 복귀를 해야 했기에 더 힘들었을 것 같다.
-
-ps2.
-내가 본 가장 비슷한 영화는 덩케르크인 것 같다.
-전쟁영화란 극적인 내용으로 꽤 담담한 편으로 풀어내기 때문이다.
