--- a/_posts/2018-08-18-1463.md
+++ b/_posts/2018-08-18-1463.md
@@ -10,23 +10,31 @@ comments: true
 문제 :
 https://www.acmicpc.net/problem/1463
 
+# dp bottom up 풀이
+D[i]는 D[i-1]를 만들 수 있는 경우의 수에 +1만 하면된다.  
+D[i//2], D[i//3] 도 마찬가지이다. 그래서 점화식을 사용해서 값을 구하고 해당 값으 array에 저장한다.    
+배열의 index가 숫자를 뜻하고 값이 그 indx(숫자)까지 도달할 때 최소 경우의 수를 뜻하다.  
+
+
+1.D[i]값은 D[i-1], D[i//2], D[i//3] 중에 가장 작은 값을 구한다.  
+2. 그 후 그 값에서 경우의 수를 늘리는 것이니 +1을 하고 array에 넣는다.   
+
+*참고*
+for문을 2에서 시작한다. 여기에서 시작하는 이유는 D[1], D[2], D[3]의 값을 1로 보내기 위해서 했다.
+
+
 ``` python
 n = int(input())
-d = [0]*(n+1)
+D = [0]*(n+1)
 
 
 # bottom-up
 for i in range(2, n+1):
-    d[i] = d[i-1] +1
-    # -1인 값으로 답을 먼저 기본 셋팅을 한다.
-    if i%2 == 0 and d[i] > d[i//2]:
-        # 2의 배수만 들어가야해서 i%2 ==0를 반드시 넣어야 한다.
-        # 2로 나눈 나머지가 0이면 그 경우의 수이기 때문에 그 -1인 값보다 d[i//2]값이 더 작으면 거기서 가져와서 넣는 것이다.
-        # 그래서 최소값을 유지할 수 있다.
-        d[i] = d[i//2] + 1
-    if i%3 == 0 and d[i] > d[i//3]:
-        d[i] = d[i//3] + 1
-print(d[n])
+    if i%2 == 0 :
+        D[i] = min(D[i-1]+1, D[i//2]+1)
+    if i%3 == 0 :
+        D[i] = min(D[i-1]+1, D[i//3]+1, D[i])
+print(D[n])
 
 # top-down
 def go(n):
