--- a/_posts/2018-08-22-11727.md
+++ b/_posts/2018-08-22-11727.md
@@ -18,16 +18,17 @@ comments: true
 - O(N**3)가능
 
 # solution 설명 :
-- **세로의 값이 1일 때** 경우의 수는 1x2: 1개 -> d[1]
-- **세로의 값이 2일 때** 1에서 온 것 한개, 가로로 두개가 눕혀 있는 것과 2x2 짜리 하나: 2개 -> d[2]
-  - 이건 추가되는 경우의 수를 말하는 것이다.
-  - d[1]에서 가로로 서있는 것 하나 가져오기 때문에 *d[2]의 값은 3* 이다.
-- **세로의 값이 3일 때** d[1]과 d[2]에서 가져와서 하나씩 붙이는 것이다.
-  - d[3]일 때 d[1]이 두배로 붙는 것이다.
-  - 2x2 가 와서 만들 수도 가로로 두개가 눕혀 있는 것의 경우의 수!
-  - 그리고 d[2]에서는 숫자가 세로로 긴 것 하나 추가이니 그냥 더하기만 하는 것이다.
-- 계속간다.
+점화식 : d[i] = d[i-1] + 2*d[i-2]  
 
+d[i-2]에 2를 곱한 이유는 i가 될 수 있는 i-2날 때 아래와 같이 두가지  
+![because-multiple-2](/images/2018-08-22-11727/because-multiple-2.png)  
+
+
+
+d[3]과 d[5]로 보면  
+아래와 같이 되기 때문에 2를 곱하는 것이다  
+
+![why-multiple-2](/images/2018-08-22-11727/why-multiple-2.png)  
 
 
 
@@ -38,8 +39,7 @@ d = [0] * (N+1)
 d[1] = 1
 d[2] = 3
 for i in range(3, N+1):
-    tmp = d[i-1] + 2 * d[i-2]
-    d[i] = tmp % 10007
+    d[i] = (d[i-1] + 2*d[i-2]) % 10007
 print(d[N]% 10007)
 ```
 
@@ -49,7 +49,7 @@ import java.util.*;
 
 public class Main{
 	public static void main(String[] args){
-		Scanner sc=new Scanner(System.in);
+		Scanner sc = new Scanner(System.in);
 		int n = sc.nextInt(), a, b=1, res=1;
 
 		for(int i=0;i<n-1;i++){
