--- a/_posts/2018-08-03-10844.md
+++ b/_posts/2018-08-03-10844.md
@@ -20,6 +20,9 @@ comments: true
 
 
 # solution 설명 :
+## 공간복잡도 D[N][10]
+이차원 배열사용
+
 - 주 idea
   - number_of_cases[N][L] : 마지막 수가 L인 N자리 계단수를 의미한다.
 - 값 넣어논다.
@@ -55,7 +58,7 @@ for j in range(2,N+1):
 
 ```
 
-마저 쓰면
+마지막 합 구하는 식은
 
 ``` python
 ans = 0
@@ -64,3 +67,16 @@ for p in range(0,10):
 print(ans%1000000000)
 ```
 마지막에 ans에 반드시 %1000000000해줘야한다.
+
+
+
+
+## 공간복잡도 O(10)  
+일차원 배열사용  
+
+``` python
+m=[0]+[1]*9
+for i in range(int(input())-1):
+    m=[m[1]]+[m[i-1]+m[i+1]for i in range(1,9)]+[m[8]]
+print(sum(m)%1000000000)
+```
