--- a/_posts/2018-08-14-1406.md
+++ b/_posts/2018-08-14-1406.md
@@ -19,18 +19,15 @@ left = [i for i in f()]
 right = list()
 
 for _ in range(int(f())):
-    line = f().split()
-    c = line[0]
-    if len(line) > 1:
-        v = line[1]
-    if c == "L" and len(left) != 0:
+    order = f().split()
+    if order[0] == "L" and left:
         right.append(left.pop())
-    elif c == "D" and len(right) != 0:
+    elif order[0] == "D" and right:
         left.append(right.pop())
-    elif c == "B" and len(left) != 0:
+    elif order[0] == "B" and left:
         left.pop()
-    elif c == "P":
-        left.append(v)
+    elif order[0] == "P":
+        left.append(order[1])
 
 print(''.join(left + right[::-1]))
 
