--- a/_posts/2018-09-27-1707.md
+++ b/_posts/2018-09-27-1707.md
@@ -134,7 +134,7 @@ def solution():
     graph = {}
     for i in range(1,v+1):
         graph[i] = set()
-    for j in range(e):
+    for _ in range(e):
         a, b = map(int, read().split())
         graph[a].add(b)
         graph[b].add(a)
@@ -142,18 +142,18 @@ def solution():
     colored = [0]*(v+1)
     ans = 'YES'
 
-    q = []
+    queue = []
     for i in range(1, v+1):
         if colored[i] != 0: continue
 
-        q.append(i)
-        while len(q) != 0:
-            for j in range(0, len(q)):
-                current = q.pop(0)
+        queue.append(i)
+        while queue:
+            for j in range(0, len(queue)):
+                current = queue.pop(0)
                 adjcolor = 0
                 for next in graph[current]:
                     if colored[next] ==  0:
-                        q.append(next)
+                        queue.append(next)
                     else:
                         if adjcolor == 0:
                             adjcolor = colored[next]
