--- a/_posts/2018-08-03-11057.md
+++ b/_posts/2018-08-03-11057.md
@@ -7,22 +7,50 @@ tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 
+# 풀이
+- D에 일단 길이가 1일 때의 값들을 저장한다.
+-  
+  ![11057](/images/2018-08-03-11057/11057.png)  
+  첫루프 때는 초록색  
+  두번째 루프때는 파란색  
+  세번째 루프때는 주황색으로 더해지는 것이다.  
+  ``` python
+  for j in range(0,10):
+      D[i][j] = sum(D[i-1][:j+1])
+          # -> 0은 매번 다음곳에 더해지고
+          # -> 1은 두번째부터 다 더해지고
+  ```
+
+  ```
+  0
+  01
+  012
+  0123
+  01234
+  012345
+  0123456
+  01234567
+  012345678
+  0123456789
+  ```
+  이런식으로 더해진다.  
+
+
+
 ``` python
-N = int(input())
-D = [[0] * 10 for _ in range(N + 1) ]
-mod = 10007
+nn = int(input())
+D = [[0] * 10 for _ in range(nn + 1) ]
 for i in range(0,10):
     D[1][i] = 1
 
 
-for i in range(2,N+1):
+for i in range(2,nn+1):
     for j in range(0,10):
-        for k in range(0,j+1):
-            D[i][j] += D[i-1][k]
-ans = 0
-for i in range(0,10):
-    ans += D[N][i]
-print(ans%mod)
+        D[i][j] = sum(D[i-1][:j+1])
+            # -> 0은 매번 다음곳에 더해지고
+            # -> 1은 두번째부터 다 더해지고
+
+print(sum(D[nn])%10007)
 
 ```
 
