최솟값 찾기

--- a/_posts/2018-08-15-2110.md
+++ b/_posts/2018-08-15-2110.md
@@ -10,7 +10,7 @@ comments: true
 문제 :
 https://www.acmicpc.net/problem/2110
 
-```pyrhon3
+``` python
 N, C = map(int, input().split())
 routers = [int(input()) for _ in range(N)]
 routers.sort()
