--- a/_posts/2018-10-31-sort.md
+++ b/_posts/2018-10-31-sort.md
@@ -52,7 +52,7 @@ https://visualgo.net/en/sorting
 ## Unstable Sort란?
 정렬 후 기존의 순서가 유지되지 않는 정렬은 Unstable Sort라고 한다.
 - 퀵정렬, 힙정렬, 선택정렬
-![unstable-sort](/images/2018-10-31-sort/unstable-sort.png)
+![ustable-sort](/images/2018-10-31-sort/unstable-sort.png)
 
 
 
@@ -86,13 +86,13 @@ for i in range(1, n):
 
 # Merge Sort
 > 평균 및 최악 실행 시간: O(NlogN)
-> 메모리: O(1)
+> 메모리: O(N)
 
 ![merge_sort](/images/2018-10-31-sort/merge_sort.png)
 # 합병 정렬의 단계
 1. 분할(Divide): 입력 배열을 같은 크기의 2개의 부분 배열로 분할한다.
-2. 정복(Conquer): 부분 배열을 정렬한다. 부분 배열의 크기가 충분히 작지 않으면 순환 호출 을 이용하여 다시 분할 정복 방법을 적용한다.
-3. 결합(Combine):
+2. 정복(Conquer): 부분 배열들을 정렬한다.(일명 서열정리) 부분 배열의 크기가 충분히 작지 않으면 순환 호출 을 이용하여 다시 분할 정복 방법을 적용한다.
+3. 결합(Combine): 정복을 통해 생긴 만들어진 코드블럭들을 합치는 행동을 한다.
 ![combine-process](/images/2018-10-31-sort/combine-process.png)
 
 
