--- a/_posts/2020-12-27-goodbye_2020.md
+++ b/_posts/2020-12-27-goodbye_2020.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "계속 불행하지만은 않았던 2020"
+title: "계속 불행하지만은 않았던 2020(feat. ㅋㄹㄴ)"
 category: Joos
 tags: [ '2020회고' ]
 comments: true
@@ -46,14 +46,14 @@ comments: true
 
 
 # 내년 계획
-내년에도 코로나가 지속될 전망이고, 단기간에 끝날거라는 기대는 안하는 것이 좋으니 이 뉴노멀 시대도 후회하지 않게 사는 2021년을 살 예정이다.
+내년에도 코로나가 지속될 전망이고, 단기간에 끝날거라는 기대는 안하는 것이 좋으니 이 뉴노멀 시대도 후회하지 않게 사는 2021년을 살 예정이다.  
 되는대로 살아보자!
 
-- 일기를 일주일에 한번은 써보자
+- 일기를 일주일에 한번은 써보자  
 작년에 일기를 꽤 띄엄띄엄 써봤는데 나 자신도 많이 알 수 있고 삶의 여유가 생겨서 좋았다. 일기를 쓰기 위해서 시간을 내야하는데, 그 덕분에 시간을 더 잘 쓸 수 있게 되는 것 같아서 아이러니 한데 좋다.
 
 
-- 다시 다이어터가 되자
+- 다시 다이어터가 되자  
 유지어터 망한썰 풉니다...ㅎㅎㅎㅎㅎ
 나는 일단 외면으로 보면 평범한 편인데, 지방이 많은 지방형 인간이어서 체중은 저체중에 가까운데 경도비만에 분류되는 웃기는 사람이었다.  
 그렇게 이년정도 유지어터 하다가, 지금은 외관 통통, 체중 통통, 지방 통통  
@@ -66,5 +66,5 @@ comments: true
 또 가성비 좋은 온라인 운동과 남동생에게 피티를 받는 등 이시국에 맞는 다이어터가 되려고 노력중이다.
 
 
-- 독서
+- 독서  
 나름 올해 10권이라는 좋은 성적을 냈다. 내년에는 유지라도 해보는 게 목표이다.
