--- a/_posts/2020-12-27-goodbye_2020.md
+++ b/_posts/2020-12-27-goodbye_2020.md
@@ -1,16 +1,17 @@
 ---
 layout: post
 section-type: post
-title: "계속 불행하지만은 않았던 2020(feat. ㅋㄹㄴ)"
+title: "계속 불행하지만은 않았던 2020 후기(feat. ㅋㄹㄴ)"
 category: Joos
 tags: [ '2020회고' ]
 comments: true
 ---
-올해는 코로나와 함께 시작해서 불행해지는 게 꽤 쉬웠다. 그치만 그 안에서 불행하지 않기 위해 많은 노력을 했고, 그 덕분에 그나마 행복한 상태가 유지되었던 순간들도 있었다.  
 진짜 올해는... 모두가 우울감 타파를 하려고 애썼던 한해 아닌지? 위기를 기회로 바꾸라니 무슨 말인지.. 위기의 순간에 힘들어 죽겄는데 그걸 발판으로 기회를 삼으라니 무슨 싸이코패스 같은 소리인지 ^ㅆ^
+올해는 코로나와 함께 시작해서 불행해지는 게 꽤 쉬웠다. 그치만 불행하지 않기 위해 많은 노력을 했고, 덕분에 꽤 많은 순간 행복했다.  
 
 
-그치만 계속 살아가려고 노력했기에 이것저것 나름 기억의 순간들을 아주 진짜 아득바득 만들었다.
+그치만 이것저것 나름 아득바득 뭔가는 하나씩 한 나 자신 칭찬한다...  
+모두 올해는 자신에게 너그러워도 괜찮은 것 같다.  
 
 
 
@@ -38,33 +39,41 @@ comments: true
 
 
 
-# 나를 칭찬"만" 해보장
-코로나 안걸리고, 올해 친구 만난 회수가 다섯손가락 안에 꼽힌 것 만으로도 나는 칭찬받을 만한 사람이라고 생각한다 :D
+# 나를 칭찬"만" 해보장  
+코로나 안걸리고, 올해 친구 만난 회수가 다섯손가락 안에 꼽힌 것 만으로도 나는 칭찬받을 만한 사람이라고 생각한다   
 진짜 최대한 집에서 자전거 타고 한시간 거리 까지는 지하철도 안타고 노력을 있는 힘껏 했다.  
 
 
 
 
 # 내년 계획
-내년에도 코로나가 지속될 전망이고, 단기간에 끝날거라는 기대는 안하는 것이 좋으니 이 뉴노멀 시대도 후회하지 않게 사는 2021년을 살 예정이다.  
-되는대로 살아보자!
+내년에도 코로나가 지속될 전망이고, 단기간에 끝날거라는 기대는 안하는 것이 좋으니 이 뉴노멀 시대도 후회하지 않게 사는 2021년을 살 생각이고 그에 맞는 계획을 세워보았다.  
+
 
 - 일기를 일주일에 한번은 써보자  
 작년에 일기를 꽤 띄엄띄엄 써봤는데 나 자신도 많이 알 수 있고 삶의 여유가 생겨서 좋았다. 일기를 쓰기 위해서 시간을 내야하는데, 그 덕분에 시간을 더 잘 쓸 수 있게 되는 것 같아서 아이러니 한데 좋다.
 
 
 - 다시 다이어터가 되자  
-유지어터 망한썰 풉니다...ㅎㅎㅎㅎㅎ
+유지어터 망한썰 풉니다...ㅎㅎㅎㅎㅎ  
 나는 일단 외면으로 보면 평범한 편인데, 지방이 많은 지방형 인간이어서 체중은 저체중에 가까운데 경도비만에 분류되는 웃기는 사람이었다.  
 그렇게 이년정도 유지어터 하다가, 지금은 외관 통통, 체중 통통, 지방 통통  
 
 이렇게 된 이유는 장이 정말 약해서 살이 잘 안찌는 체질이었는데 올해 장건강이 좋아지는바람에(?) 꾸준히 잘쪄주고ㅜㅜ,  
 운동할 때 마스크 쓰고 유산소하니 너무 힘들었다 ㅠㅠ  
 
-무튼 그래서 올해는 죽이든 밥이든 바디프로필이라는 목표를 세우고 코로나 시국의 운동법을 계속 찾는 중이다.
-그 중 하나 성공적으로 해낸 것은 샤오미 워킹패드로 집에서 걷기를 만보 넘게 걷는 것이다.
-또 가성비 좋은 온라인 운동과 남동생에게 피티를 받는 등 이시국에 맞는 다이어터가 되려고 노력중이다.
+무튼 그래서 올해는 죽이든 밥이든 바디프로필이라는 목표를 세우고 코로나 시국의 운동법을 계속 찾는 중이다.  
+그 중 하나 성공적으로 해낸 것은 샤오미 워킹패드로 집에서 걷기를 만보 넘게 걷는 것이다.  
+또 가성비 좋은 온라인 운동과 남동생에게 피티를 받는 등 이시국에 맞는 다이어터가 되려고 노력중이다.  
 
 
 - 독서  
 나름 올해 10권이라는 좋은 성적을 냈다. 내년에는 유지라도 해보는 게 목표이다.
+
+
+
+
+# 회고모임 후기(?)
+나름 어쩌다보니 회고모임이 4개국 개발자들의 모임이었는데...  
+발표자 10명의 올해 회고를 들으면서 느낀 것이 모두가 다 삶을 뜨겁게 살고 있었다.  
+나도 2021을 뜨겁게 살아봐야겠다.  
