--- a/_posts/2021-01-24-hbase.md
+++ b/_posts/2021-01-24-hbase.md
@@ -35,7 +35,7 @@ comments: true
 # HBase의 단점
 1. 특정 region 서버에 특정 table의 region이 집중되기 쉬워 성능저하로 이어질 수 있음.
 2. 적절한 세팅을 위한 조건자료가 있으나 클러스터 규모나 기본 스팩차이가 있어 적용이 힘들 수 있음
-
+3. 연결시 dns에 민감하기 때문에 local환경을 셋팅하는데 허들이 있다.
 
 
 
